resource buttons no longer stretch horizontally

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -318,10 +318,12 @@ h3 {
 .resource-container {
   display: flex;
   flex-direction: column;
+  align-items: flex-start; /* keep items from stretching horizontally */
   padding-left: 5vw;
 }
 
 .resource {
+  display: inline-block;
   color: var(--primary);
   text-decoration: none;
   background-color: var(--lightgray);
